# OCRTOC_Challenge

./: README.md  class_list.txt
ocrtoc_ws/src/ocrtoc_solution/: CMakeLists.txt  package.xml
ocrtoc_ws/src/ocrtoc_solution/controller/: gripper_controller.yaml
ocrtoc_ws/src/ocrtoc_solution/launch/: commit_solution.launch  filter_pass.launch
ocrtoc_ws/src/ocrtoc_solution/scripts/: algo.py  commit_solution.py  commit_solution_class.py  commit_solution_diff.py  commit_solution_feedback.py  commit_solution_feedback_old.py  do_task.py  do_task_class_orientation.py  grasping.py  grasping_1.py  move.py  move_arm.py  move_arm_debug.py  pcl_controller.py  perception.py  segmentation.cpp  segmentation_sttable.cpp  slide_arm.py  swap.py
ocrtoc_ws/src/ocrtoc_solution/scripts/old/: commit_solution_class.py  commit_solution_current.py  commit_solution_current_stable.py  commit_solution_feedback.py  commit_solution_feedback_old.py  commit_solution_integrated.py  commit_solution_legacy.py  commit_solution_new.py  commit_solution_old.py  do_task_class.py  do_task_class_new.py  do_task_class_new1.py  do_task_class_old.py  do_task_class_orientation.py  do_task_class_orientation_new.py  euler2quat.py  mesh_to_pcd.py  move.py  move_arm.py  o3d2ros.py  pose.py  pose1.py  pose2.py  pose2_old.py  save_pcl.py  segmentation_old.cpp  slide_arm.py  test.py  transform.py  yaw.py
ocrtoc_ws/src/ocrtoc_solution/scripts_motomini/: camera_calibration.py  do_task.py  eval.py  grasping.py  move.py  move_arm_class.py  perception.py  swap.py
ocrtoc_ws/src/ocrtoc_solution/src/: pcl_concatinate.cpp
(+1925 files in other folders)
